--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="service-box">
                         <figure>
                   <img src="img/speaking1.jpeg" class="img-thumbnail" />
-                <figcaption>Speaking to a group of high school students in Colombus, OH.</figcaption>
+                <figcaption>Columbus Alternative HS. Columbus, OH.</figcaption>
                 </figure>
                 
                 </div>
