--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
                 </div>
               
                     
-                </div>
-                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h3>Get in touch!</h3>
-                <div class="col-lg-12 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a >wahab.owolabi {@} gmail</a></p>
+                <!--</div>-->
+                <!-- <div class="col-lg-8 col-lg-offset-2 text-center">-->
+                <!--<h3>Get in touch!</h3>-->
+                <!--<div class="col-lg-12 text-center">-->
+                <!--    <i class="fa fa-envelope-o fa-3x sr-contact"></i>-->
+                <!--    <p><a >wahab.owolabi {@} gmail</a></p>-->
                 </div>
                 </div>
             </div>
