--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                     
                     I'm also involved in a few different projects including </a>
                     
-                    <h3><a href= "http://www.collegezen.com">Collegezen</a></h3>
-                    <h3><a href= "http://www.igniteurx.com">UR(x) a Tech Recruiting Conference</a></h3>
+                    <h3><a href= "https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=3&ved=0ahUKEwjq97THhMTPAhUn2oMKHetfAPwQFggmMAI&url=https%3A%2F%2Ftechcrunch.com%2F2013%2F01%2F29%2Fthe-17-winners-of-the-facebook-gates-foundations-education-app-contest-are-making-college-easier%2F&usg=AFQjCNHoqUG-roDkE2U1D0aO8gQFHSEOkQ&bvm=bv.134495766,d.dmo">Collegezen</a></h3>
+                    <h3><a href= "http://www.urxconference.com">UR(x) a Tech Recruiting Conference</a></h3>
                     <h3><a href= "http://www.kingsofthebay.com">Kings of the Bay</a></h3>
                     <h3>Sometimes I <a href= "http://www.twitter.com/pbnyc26">tweet</a> about things. Those things typically fall under entrepreneurship, culture, travel, and sports. </h3>
                 </div>
