--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <h3>I have found that helping others sincerely makes me happy, so I try to incorporate that in everything I do.
                     <br>
                     <br>
-                     <a href= "http://www.linkedin.com/in/wahabowolabi">Professionally</a>, I am a Partner at <a href= "http://www.a16z.com">Andreessen Horowitz</a>.
+                     <a href= "http://www.linkedin.com/in/wahabowolabi">Professionally</a>, I work at <a href= "http://www.a16z.com">Andreessen Horowitz</a>.
                     
                     I'm also involved in a few different projects including </a>
                     
