--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Ben Sperry</title>
+    <title>Wahab Owolabi</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
@@ -22,11 +22,11 @@
 
 
     <div class="info-text animated fadeIn">
-        <p><span class="heavytext">Ben Sperry</span> is a user interface designer and front end tinkerer based in Madison, WI, USA. He’s fascinated with making delightful human and machine interactions.
+        <p>I'm from New York but live in the San Francisco Bay Area and work at Andreessen Horowitz.<span class="heavytext">fdfdf</span> I'm Wahab  a  interface designer and front end tinkerer based in San Francisco, CA. I enjoy helping others and try to incorporate that in everything I do. 
         </p> 
                        
         <p>
-        He is also the co-founder of <a href="http://drifty.com" target="_blank">Drifty Co</a>, and co-creator of <a href="http://ionicframework.com" target="_blank">Ionic</a>.
+        I was a co-founder of <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=3&ved=0ahUKEwjq97THhMTPAhUn2oMKHetfAPwQFggmMAI&url=https%3A%2F%2Ftechcrunch.com%2F2013%2F01%2F29%2Fthe-17-winners-of-the-facebook-gates-foundations-education-app-contest-are-making-college-easier%2F&usg=AFQjCNHoqUG-roDkE2U1D0aO8gQFHSEOkQ&bvm=bv.134495766,d.dmo" target="_blank">CollegeZen</a>, and  <a href="http://www.urxconference.com/" target="_blank">UR(x) - The University Recruiting Conference</a>.
         </p>
         
         <p>This website is proof of his existence. Sort of.
@@ -35,15 +35,13 @@
 
     <div class="social">
         <ul class="socicons">
-            <li><a class="soc-twitter animated fadeIn" href="https://twitter.com/benjsperry" target="_blank"></a></li>
-            <li><a class="soc-github animated fadeIn" href="https://github.com/bensperry" target="_blank"></a></li>
-            <li><a class="soc-dribbble animated fadeIn" href="https://dribbble.com/helloimben" target="_blank"></a></li>
-            <li><a class="soc-googlep animated fadeIn" href="https://plus.google.com/+BenSperry/posts" target="_blank"></a></li>
+            <li><a class="soc-twitter animated fadeIn" href="https://twitter.com/pbnyc26" target="_blank"></a></li>
+            <li><a class="soc-linkedin animated fadeIn" href="http://www.linkedin.com/in/wahabowolabi" target="_blank"></a></li>
         </ul>
     </div>   
 
     <footer>
-        <p class="footer-text animated fadeIn">&copy; 2015 Benjamin Joseph Sperry</p>
+        <p class="footer-text animated fadeIn">&copy; 2017 Wahab Ayo Owolabi</p>
     </footer>
 
 </body>
