--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
 
 
     <div class="info-text animated fadeIn">
-        <p>I'm from Queens, NY, I spent some time in Pittsburgh wokring at Carnegie Mellon University and starting  <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=3&ved=0ahUKEwjq97THhMTPAhUn2oMKHetfAPwQFggmMAI&url=https%3A%2F%2Ftechcrunch.com%2F2013%2F01%2F29%2Fthe-17-winners-of-the-facebook-gates-foundations-education-app-contest-are-making-college-easier%2F&usg=AFQjCNHoqUG-roDkE2U1D0aO8gQFHSEOkQ&bvm=bv.134495766,d.dmo" target="_blank">CollegeZen</a> before moving to California to work at Stanford University. Now I live in the San Francisco Bay Area and work at Andreessen Horowitz.<span class="heavytext">fdfdf</span> I'm Wahab  a  interface designer and front end tinkerer based in San Francisco, CA. I enjoy helping others and try to incorporate that in everything I do. 
-        </p> 
+        <p>I'm from Queens, NY, I spent some time in Pittsburgh wokring at Carnegie Mellon University and starting  <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=3&ved=0ahUKEwjq97THhMTPAhUn2oMKHetfAPwQFggmMAI&url=https%3A%2F%2Ftechcrunch.com%2F2013%2F01%2F29%2Fthe-17-winners-of-the-facebook-gates-foundations-education-app-contest-are-making-college-easier%2F&usg=AFQjCNHoqUG-roDkE2U1D0aO8gQFHSEOkQ&bvm=bv.134495766,d.dmo" target="_blank">CollegeZen</a>
+            before moving to California to work at Stanford. </p> 
                        
         <p>
+        Now I live in the San Francisco Bay Area and work at <a href="http://www.a16z.com/" target="_blank">Andreessen Horowitz</a>. I enjoy being a connector of people and helping others. 
+        a  interface designer and front end tinkerer based in San Francisco, CA. I enjoy helping others and try to incorporate that in everything I do. 
         I was a co-founder of, and  <a href="http://www.urxconference.com/" target="_blank">UR(x) - The University Recruiting Conference</a>.
         </p>
         
-        <p>This website is proof of his existence. Sort of.
+        <p>This website is <span class="heavytext">fdfdf</span> I of his existence. Sort of.
         </p>
     </div>
 
