--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <div class="info-text animated fadeIn">
         
         <p>I'm from Queens, NY. </p> 
-       <p>I spent some time in Pittsburgh working at Carnegie Mellon University and starting <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=3&ved=0ahUKEwjq97THhMTPAhUn2oMKHetfAPwQFggmMAI&url=https%3A%2F%2Ftechcrunch.com%2F2013%2F01%2F29%2Fthe-17-winners-of-the-facebook-gates-foundations-education-app-contest-are-making-college-easier%2F&usg=AFQjCNHoqUG-roDkE2U1D0aO8gQFHSEOkQ&bvm=bv.134495766,d.dmo" target="_blank">CollegeZen</a>
-            before moving to California to work at Stanford. 
+       <p>Before moving to California to work at Stanford, I spent some time in Pittsburgh working at Carnegie Mellon University and starting <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=3&ved=0ahUKEwjq97THhMTPAhUn2oMKHetfAPwQFggmMAI&url=https%3A%2F%2Ftechcrunch.com%2F2013%2F01%2F29%2Fthe-17-winners-of-the-facebook-gates-foundations-education-app-contest-are-making-college-easier%2F&usg=AFQjCNHoqUG-roDkE2U1D0aO8gQFHSEOkQ&bvm=bv.134495766,d.dmo" target="_blank">CollegeZen</a>.
            Now I live in the San Francisco Bay Area and work at <a href="http://www.a16z.com/" target="_blank">Andreessen Horowitz</a>.
            
         </p>
