--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="social">
         <ul class="socicons">
-            <li><a class="soc-twitter animated fadeIn" href="https://twitter.com/pbnyc26" target="_blank"></a></li>
+            <li><a class="fa-twitter animated fadeIn" href="https://twitter.com/pbnyc26" target="_blank"></a></li>
             <li><a class="soc-linkedin animated fadeIn" href="http://www.linkedin.com/in/wahabowolabi" target="_blank"></a></li>
         </ul>
     </div>   
