--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
            
         </p>
         
-        <p> Connecting people and helping others is something I enjoy, so I try to incorporate that in everything I do including helping produce <a href="http://www.urxconference.com/" target="_blank">UR(x) - The University Recruiting Conference</a>. 
+        <p> I enjoy connecting people and helping others while fueling my entreprenerial spirit. Currently helping to produce <a href="http://www.urxconference.com/" target="_blank">UR(x) - The University Recruiting Conference</a>. 
         </p>
     </div>
 
