--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
         </p>
     </div>
 
-    <div class="social">
+   <div class="social">
         <ul class="socicons">
-            <li><a class="fa-twitter animated fadeIn" href="https://twitter.com/pbnyc26" target="_blank"></a></li>
-            <li><a class="soc-linkedin animated fadeIn" href="http://www.linkedin.com/in/wahabowolabi" target="_blank"></a></li>
+            <li><a class="soc-twitter animated fadeIn" href="https://twitter.com/benjsperry" target="_blank"></a></li>
+            <li><a class="soc-github animated fadeIn" href="https://github.com/bensperry" target="_blank"></a></li>
+            <li><a class="soc-dribbble animated fadeIn" href="https://dribbble.com/helloimben" target="_blank"></a></li>
+            <li><a class="soc-googlep animated fadeIn" href="https://plus.google.com/+BenSperry/posts" target="_blank"></a></li>
         </ul>
-    </div>   
+    </div>    
 
     <footer>
         <p class="footer-text animated fadeIn">&copy; 2017 Wahab Ayo Owolabi</p>
