--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
    <div class="social">
         <ul class="socicons">
-            <li><a class="soc-twitter animated fadeIn" href="https://twitter.com/benjsperry" target="_blank"></a></li>
+            <li><a class="fa fa-twitter animated fadeIn" href="https://twitter.com/benjsperry" target="_blank"></a></li>
             <li><a class="soc-github animated fadeIn" href="https://github.com/bensperry" target="_blank"></a></li>
             <li><a class="soc-dribbble animated fadeIn" href="https://dribbble.com/helloimben" target="_blank"></a></li>
             <li><a class="soc-googlep animated fadeIn" href="https://plus.google.com/+BenSperry/posts" target="_blank"></a></li>
