--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
            
         </p>
         
-        <p> I have a passion for entrepreneurship, connecting people, and most importantly helping others. It's been an ongoing journey incorporating that in everything I do. Right now, my free time is focused on helping to launch <a href="http://www.urxconference.com/" target="_blank">UR(x) - The University Recruiting Conference</a>. 
+        <p> I have a passion for entrepreneurship, connecting people, and most importantly helping others. It's been an ongoing journey incorporating that in everything I do. </a>. 
         </p>
     </div>
 
