--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           I live in San Francisco and work on a &#128640; called <a href="https://www.rubrik.com/" target="_blank"> Rubrik </a>.
         </p>
         
-        <p> What drives me is my passion for entrepreneurship, connecting people, and most importantly helping others. 
+        <p> I love connecting people, and most importantly helping others. 
             This has typically influenced the projects I decide to work on including founding
             <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=3&ved=0ahUKEwjq97THhMTPAhUn2oMKHetfAPwQFggmMAI&url=https%3A%2F%2Ftechcrunch.com%2F2013%2F01%2F29%2Fthe-17-winners-of-the-facebook-gates-foundations-education-app-contest-are-making-college-easier%2F&usg=AFQjCNHoqUG-roDkE2U1D0aO8gQFHSEOkQ&bvm=bv.134495766,d.dmo" target="_blank">CollegeZen</a>
        and producing <a href="http://www.urxconference.com/" target="_blank">URx - The University Recruiting Conference</a>. 
