copyright auto update

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
     </div>    
 
     <footer>
-        <p class="footer-text animated fadeIn">&copy; 2017 Wahab Ayo Owolabi</p>
+        <p class="footer-text animated fadeIn">&copy; <script>
+    document.write(new Date().getFullYear())
+  </script> Wahab Ayo Owolabi</p>
     </footer>
 
 </body>
