--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="info-text animated fadeIn">
         
-        <p>Nigerian proud, NYC bred. </p> 
+        <p>Lagos,London, NYC, PGH, SF. </p> 
        <p>I've built networks & programs at some great places like Carnegie Mellon, Stanford, and Andreessen Horowitz. 
           I live in San Francisco and work on a &#128640; called <a href="https://www.rubrik.com/" target="_blank"> Rubrik </a>.
         </p>
