--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/animate.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 
@@ -23,7 +24,7 @@
 
     <div class="info-text animated fadeIn">
         
-        <p>Lagos,London, NYC, PGH, SF. </p> 
+        <p>Heavily influenced by my Nigerian ubringing in NYC. </p> 
        <p>I've built networks & programs at some great places like Carnegie Mellon, Stanford, and Andreessen Horowitz. 
           I live in San Francisco and work on a &#128640; called <a href="https://www.rubrik.com/" target="_blank"> Rubrik </a>.
         </p>
