--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="info-text animated fadeIn">
         
-        <p>Heavily influenced by my Nigerian ubringing in NYC. </p> 
+        <p>Heavily influenced by my Nigerian upbringing in NYC. </p> 
        <p>I've built networks & programs at some great places like Carnegie Mellon, Stanford, and Andreessen Horowitz. 
           I live in San Francisco and work on a &#128640; called <a href="https://www.rubrik.com/" target="_blank"> Rubrik </a>.
         </p>
