--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
 
    <div class="social">
         <ul class="socicons">
-            <li><a class="fa fa-twitter animated fadeIn" href="https://twitter.com/pbnyc26" target="_blank"></a></li>
-            <li><a class="soc-github animated fadeIn" href="https://instagram.com/pbnyc26" target="_blank"></a></li>
-            <li><a class="soc-dribbble animated fadeIn" href="https://linkedin.com/" target="_blank"></a></li>
+            <li><a class="fa-3x fa-twitter animated fadeIn" href="https://twitter.com/pbnyc26" target="_blank"></a></li>
+            <li><a class="fa-3x fa-instagram animated fadeIn" href="https://instagram.com/pbnyc26" target="_blank"></a></li>
+            <li><a class="fa-5x fa-linkedin animated fadeIn" href="https://linkedin.com/in/wahabowolabi" target="_blank"></a></li>
         </ul>
-    </div>    
+    </div>   
+    
+    
 
     <footer>
         <p class="footer-text animated fadeIn">&copy; <script>
