--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
    <div class="social">
         <ul class="socicons">
-            <li><a class="fa fa-twitter fa-3x" href="https://twitter.com/pbnyc26" target="_blank"></a></li>
+            <li><a class="fa fa-twitter" href="https://twitter.com/pbnyc26" target="_blank"></a></li>
             <li><a class="fa fa-instagram animated fadeIn" href="https://instagram.com/pbnyc26" target="_blank"></a></li>
             <li><a class="fa fa-linkedin animated fadeIn" href="https://linkedin.com/in/wahabowolabi" target="_blank"></a></li>
         </ul>
