--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p> I love connecting people, and most importantly helping others. 
             This has typically influenced the projects I decide to work on including founding
             <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=3&ved=0ahUKEwjq97THhMTPAhUn2oMKHetfAPwQFggmMAI&url=https%3A%2F%2Ftechcrunch.com%2F2013%2F01%2F29%2Fthe-17-winners-of-the-facebook-gates-foundations-education-app-contest-are-making-college-easier%2F&usg=AFQjCNHoqUG-roDkE2U1D0aO8gQFHSEOkQ&bvm=bv.134495766,d.dmo" target="_blank">CollegeZen</a>
-       and producing <a href="http://www.urxconference.com/" target="_blank">URx - The University Recruiting Conference</a>. 
+       and producing <a href="http://www.urxconference.com/" target="_blank">URx Conference, An Event for Early Talent Recruiters and Developers.</a>. 
         </p>
     </div>
 
