--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>Nigerian. Raised in NYC based in SF. </p> 
       
         <p>
-          I've built communities, networks & programs at some great places like Carnegie Mellon, Stanford, Andreessen Horowitz Rubrik,
+          I've built communities, networks & programs at some great places including Stanford University, Andreessen Horowitz,
            and now Facebook. 
           
         </p>
